--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="./style.css" >
     <title>Shoes Website Landing Page</title>
 </head>
 <body>
@@ -15,11 +15,11 @@
             <nav>
                 <ul>
                     <li><a href="">Home</a></li>
-                    <li><a href="C:\Users\evilk\OneDrive\Desktop\IDC\FullStack\Final Project\login.html">Log In</a></li>
-                    <li><a href="cart.html">My Cart</a></li>
-                    <li><a href="catalog.html">Catalog</a></li>
-                    <li>><a href="about.html">About Us</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="./login.html">Log In</a></li>
+                    <li><a href="./cart.html">My Cart</a></li>
+                    <li><a href="./catalog.html">Catalog</a></li>
+                    <li>><a href="./about.html">About Us</a></li>
+                    <li><a href="./contact.html">Contact Us</a></li>
 
                 </ul>
             </nav>
@@ -27,7 +27,7 @@
         <div class="content">
             <h1>The House of <br><span class="style">Trendy Shoes</span></h1>
             <div class="text">
-                <button class="btn" href="catalog.html">Shop Now</button>
+                <button class="btn" href="./catalog.html">Shop Now</button>
                 <div class="social-media">
                     <a href=""><i class="fa icons fa-facebook"></i></a>
                     <a href=""><i class="fa icons fa-instagram"></i></a>
