--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h3 class="logo">Trendy Shoes Online</h3>
             <nav>
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="./login.html">Log In</a></li>
                     <li><a href="./cart.html">My Cart</a></li>
                     <li><a href="./catalog.html">Catalog</a></li>
