--- a/about.html
+++ b/about.html
@@ -9,6 +9,12 @@
         <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
     </head>
     <body>
+        <div class="topnav">
+            <a class="active" href="index.html">Home</a>
+            <div class="topnav-right">
+              <a href="#">Log Out</a>
+            </div>
+          </div> 
         <section>
             <div class = "image">
             </div>
