--- a/cart.html
+++ b/cart.html
@@ -3,6 +3,13 @@
 <head>  
     <link href="cart.css" rel="stylesheet">   
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<body>
+    <div class="topnav">
+        <a class="active" href="index.html">Home</a>
+        <div class="topnav-right">
+          <a href="#">Log Out</a>
+        </div>
+      </div> 
 <div class="container padding-bottom-3x mb-1">
     <!-- Shopping Cart-->
     <div class="table-responsive shopping-cart">
