--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,12 @@
     <title>Eden</title>
 </head>
 <body>
+    <div class="topnav">
+        <a class="active" href="index.html">Home</a>
+        <div class="topnav-right">
+          <a href="#">Log Out</a>
+        </div>
+      </div> 
     <section id="nav-form" class="form-section">
         <div id="form-container">
             <h2>Contact Us</h2>
