--- a/login.html
+++ b/login.html
@@ -4,7 +4,13 @@
     <title>Login Form</title>    
     <link rel="stylesheet" type="text/css" href="login.css">    
 </head>    
-<body>    
+<body> 
+    <div class="topnav">
+        <a class="active" href="index.html">Home</a>
+        <div class="topnav-right">
+          <a href="#">Log Out</a>
+        </div>
+      </div>     
     <h2>Login Page</h2><br>    
     <div class="login">    
     <form id="login" method="get" action="login.php">    
