--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="app.js" defer></script>   
 </head>    
-<body>    
+<body>
+  <div class="topnav">
+    <a class="active" href="index.html">Home</a>
+    <div class="topnav-right">
+      <a href="#">Log Out</a>
+    </div>
+  </div>     
   <div class="search-wrapper">
     <label for="search">Search</label>
     <input type="search" id="search"  onkeyup="sendData(this)" data-search>
