added navbar functionality according to if user authenticated + changed a bit formatting

--- a/cart.html
+++ b/cart.html
@@ -5,8 +5,7 @@
     <link href="cart.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./navbar.css">
-    <script type="text/javascript" src="app.js" defer></script>
-
+    <script type="text/javascript" src="app.js" async></script>
 <body>
     <h2>Shopping cart</h2><br>
     <div class="navbar">
