--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,11 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./contact.css">
     <link rel="stylesheet" href="./navbar.css">
-    <script type="text/javascript" src="app.js" defer></script>
+    <script type="text/javascript" src="app.js" async></script>
     <title>Contact Us</title>
 </head>
 
 <body>
-    <h2>Register Page</h2><br>
     <div class="navbar">
         <nav id="nav">
             <ul>
