--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <title>Register Form</title>
     <link rel="stylesheet" type="text/css" href="login.css">
     <link rel="stylesheet" href="./navbar.css">
-    <script type="text/javascript" src="app.js" defer></script>
+    <script type="text/javascript" src="app.js" async></script>
     <script type="text/javascript" src="script.js"></script>
 </head>
 
