--- a/catalog.html
+++ b/catalog.html
@@ -5,11 +5,12 @@
   <link rel="stylesheet" type="text/css" href="catalog.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="./navbar.css">
-  <script type="text/javascript" src="app.js" defer></script>
+  <script type="text/javascript" src="app.js" async></script>
+  <script type="text/javascript" src="addToCart.js" defer></script>
+  <script type="text/javascript" src="catalog.js" defer></script>
 </head>
 
 <body>
-  <h2>Catalog Page</h2><br>
   <div class="navbar">
     <nav id="nav">
       <ul>
