--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <title>Login Form</title>
   <link rel="stylesheet" type="text/css" href="login.css">
   <link rel="stylesheet" href="./navbar.css">
-  <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="app.js" async></script>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./catalog.html">Catalog</a></li>
-          <li>><a href="./about.html">About Us</a></li>
+          <li><a href="./about.html">About Us</a></li>
           <li><a href="./contact.html">Contact Us</a></li>
         </ul>
       </nav>
