added navbar functionality according to if user authenticated + changed a bit formatting

--- a/about.html
+++ b/about.html
@@ -1,58 +1,72 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>About Us</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="about.css">
-        <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div class="topnav">
-            <a class="active" href="index.html">Home</a>
-            <div class="topnav-right">
-              <a href="#">Log Out</a>
-            </div>
-          </div> 
-        <section>
-            <div class = "image">
-            </div>
 
-            <div class = "content">
-                <h2>About Us</h2>
-                <span><!-- line here --></span>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>About Us</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="./navbar.css">
+    <script type="text/javascript" src="app.js" async></script>
+    <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
+</head>
 
-                <p>We champion continual progress for athletes and sport by taking action to help athletes reach their potential. We bring you the top products out there so you can exell in your way and make your dreams come true</p>
+<body>
+    <h2>Shopping cart</h2><br>
+    <div class="navbar">
+        <nav id="nav">
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./catalog.html">Catalog</a></li>
+                <li><a href="./about.html">About Us</a></li>
+                <li><a href="./contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </div>
+    <section>
+        <div class="image">
+        </div>
 
-                <ul class = "links">
-                    <li><a href = "#">work</a></li>
+        <div class="content">
+            <h2>About Us</h2>
+            <span>
+                <!-- line here -->
+            </span>
 
-                    <div class = "vertical-line"></div>
+            <p>We champion continual progress for athletes and sport by taking action to help athletes reach their
+                potential. We bring you the top products out there so you can exell in your way and make your dreams
+                come true</p>
 
-                    <li><a href = "#">service</a></li>
+            <ul class="links">
+                <li><a href="#">work</a></li>
 
-                    <div class = "vertical-line"></div>
-                    
-                    <li><a href = "contact.html">contact</a></li>
-                </ul>
+                <div class="vertical-line"></div>
 
-                <ul class = "icons">
-                    <li>
-                        <i class = "fa fa-twitter"></i>
-                    </li>
-                    <li>
-                        <i class = "fa fa-facebook"></i>
-                    </li>
-                    <li>
-                        <i class = "fa fa-github"></i>
-                    </li>
-                    <li>
-                        <i class = "fa fa-pinterest"></i>
-                    </li>
-                </ul>
-            </div>
-        </section>
-        
-    </body>
+                <li><a href="#">service</a></li>
+
+                <div class="vertical-line"></div>
+
+                <li><a href="contact.html">contact</a></li>
+            </ul>
+
+            <ul class="icons">
+                <li>
+                    <i class="fa fa-twitter"></i>
+                </li>
+                <li>
+                    <i class="fa fa-facebook"></i>
+                </li>
+                <li>
+                    <i class="fa fa-github"></i>
+                </li>
+                <li>
+                    <i class="fa fa-pinterest"></i>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+</body>
+
 </html>
