--- a/catalog.html
+++ b/catalog.html
@@ -1,159 +1,168 @@
-<!DOCTYPE html>    
-<html>    
-<head>     
-    <link rel="stylesheet" type="text/css" href="catalog.css"> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script src="app.js" defer></script>   
-</head>    
+<!DOCTYPE html>
+<html>
+
+<head>
+  <link rel="stylesheet" type="text/css" href="catalog.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="./navbar.css">
+  <script type="text/javascript" src="app.js" defer></script>
+</head>
+
 <body>
-  <div class="topnav">
-    <a class="active" href="index.html">Home</a>
-    <div class="topnav-right">
-      <a href="#">Log Out</a>
-    </div>
-  </div>     
+  <h2>Catalog Page</h2><br>
+  <div class="navbar">
+    <nav id="nav">
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./catalog.html">Catalog</a></li>
+        <li><a href="./about.html">About Us</a></li>
+        <li><a href="./contact.html">Contact Us</a></li>
+      </ul>
+    </nav>
+  </div>
   <div class="search-wrapper">
     <label for="search">Search</label>
-    <input type="search" id="search"  onkeyup="sendData(this)" data-search>
+    <input type="search" id="search" onkeyup="sendData(this)" data-search>
   </div>
-    <div class="Items container">
-        <h1 class="text-center text-muted">Product catalog</h1>
-        <div class="row flow-offset-1">
-          <div class="col-xs-6 col-md-4">
-            <div class="product tumbnail thumbnail-3"><a href="#"><img src="images/shoes1.jpg"></a>
-              <div class="caption">
-                <button>
-                  <span class="add-to-cart">Add To Cart</span>
-                  <i class="fas fa-shopping-cart"></i>
-                  <i class="fas fa-shopping-bag"></i>
-                  <span class="added-to-cart">Added To Cart</span>
-              </button>
-                <h6><a href="#">Air Jordan 3 Retro</a></h6><span class="price">
-                  <del>$459.99</del></span><span class="price sale">$399.99</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-6 col-md-4">
-            <div class="product tumbnail thumbnail-3"><a href="#"><img src="images/shoes2.jpg"></a>
-              <div class="caption">
-                <button>
-                  <span class="add-to-cart">Add To Cart</span>
-                  <i class="fas fa-shopping-cart"></i>
-                  <i class="fas fa-shopping-bag"></i>
-                  <span class="added-to-cart">Added To Cart</span>
-              </button>
-                <h6><a href="#">PG 6</a></h6><span class="price">
-                  <del>$230.00</del></span><span class="price sale">$220.00</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-6 col-md-4">
-            <div class="product tumbnail thumbnail-3"><a href="#"><img src="images/shoes3.jpg"></a>
-              <div class="caption">
-                <button>
-                  <span class="add-to-cart">Add To Cart</span>
-                  <i class="fas fa-shopping-cart"></i>
-                  <i class="fas fa-shopping-bag"></i>
-                  <span class="added-to-cart">Added To Cart</span>
-              </button>
-                <h6><a href="#">Kyriw Low 5</a></h6><span class="price">$299.99</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-6 col-md-4">
-            <div class="product tumbnail thumbnail-3"><a href="#"><img src="images/shoes4.jpg"></a>
-              <div class="caption">
-                <button>
-                  <span class="add-to-cart">Add To Cart</span>
-                  <i class="fas fa-shopping-cart"></i>
-                  <i class="fas fa-shopping-bag"></i>
-                  <span class="added-to-cart">Added To Cart</span>
-              </button>
-                <h6><a href="#">Grade School Air Jordan 12 Retro</a></h6><span class="price">
-                  <del>$200.00</del></span><span class="price sale">$80.00</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-6 col-md-4">
-            <div class="product tumbnail thumbnail-3"><a href="#"><img src="images/shoes5.jpg"></a>
-              <div class="caption">
-                <button>
-                  <span class="add-to-cart">Add To Cart</span>
-                  <i class="fas fa-shopping-cart"></i>
-                  <i class="fas fa-shopping-bag"></i>
-                  <span class="added-to-cart">Added To Cart</span>
-              </button>
-                <h6><a href="#">Grade School Dunk Low</a></h6><span class="price">
-                  <del>$219.99</del></span><span class="price sale">$199.99</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-6 col-md-4">
-            <div class="product tumbnail thumbnail-3"><a href="#"><img src="images/shoes6.jpg" alt=""></a>
-              <div class="caption">
-                <button>
-                  <span class="add-to-cart">Add To Cart</span>
-                  <i class="fas fa-shopping-cart"></i>
-                  <i class="fas fa-shopping-bag"></i>
-                  <span class="added-to-cart">Added To Cart</span>
-              </button>
-                <h6><a href="#">Air Jordan 7 Retro SE</a></h6><span class="price">
-                  <del>$324.99</del></span><span class="price sale">$224.99</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-6 col-md-4">
-            <div class="product tumbnail thumbnail-3"><a href="#"><img src="images/shoes7.jpg" alt=""></a>
-              <div class="caption">
-                <button>
-                  <span class="add-to-cart">Add To Cart</span>
-                  <i class="fas fa-shopping-cart"></i>
-                  <i class="fas fa-shopping-bag"></i>
-                  <span class="added-to-cart">Added To Cart</span>
-              </button>
-                <h6><a href="#">Air Max 2 CB 94</a></h6><span class="price">$300.00</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-6 col-md-4">
-            <div class="product tumbnail thumbnail-3"><a href="#"><img src="images/shoes8.jpg" alt=""></a>
-              <div class="caption">
-                <button>
-                  <span class="add-to-cart">Add To Cart</span>
-                  <i class="fas fa-shopping-cart"></i>
-                  <i class="fas fa-shopping-bag"></i>
-                  <span class="added-to-cart">Added To Cart</span>
-              </button>
-                <h6><a href="#">Air Jordan 1 Mid</a></h6><span class="price">
-                  <del>$220.99</del></span><span class="price sale">$199.49</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-6 col-md-4">
-            <div class="product tumbnail thumbnail-3"><a href="#"><img src="images/shoes9.jpg" alt=""></a>
-              <div class="caption">
-                <button>
-                  <span class="add-to-cart">Add To Cart</span>
-                  <i class="fas fa-shopping-cart"></i>
-                  <i class="fas fa-shopping-bag"></i>
-                  <span class="added-to-cart">Added To Cart</span>
-              </button>
-                <h6><a href="#">Air Jordan 1 High</a></h6><span class="price">
-                  <del>$220.99</del></span><span class="price sale">$210.00</span>
-              </div>
-            </div>
+  <div class="Items container">
+    <h1 class="text-center text-muted">Product catalog</h1>
+    <div class="row flow-offset-1">
+      <div class="col-xs-6 col-md-4">
+        <div class="product tumbnail thumbnail-3"><a href="#"><img src="images/shoes1.jpg"></a>
+          <div class="caption">
+            <button>
+              <span class="add-to-cart">Add To Cart</span>
+              <i class="fas fa-shopping-cart"></i>
+              <i class="fas fa-shopping-bag"></i>
+              <span class="added-to-cart">Added To Cart</span>
+            </button>
+            <h6><a href="#">Air Jordan 3 Retro</a></h6><span class="price">
+              <del>$459.99</del></span><span class="price sale">$399.99</span>
           </div>
         </div>
-      </div>   
+      </div>
+      <div class="col-xs-6 col-md-4">
+        <div class="product tumbnail thumbnail-3"><a href="#"><img src="images/shoes2.jpg"></a>
+          <div class="caption">
+            <button>
+              <span class="add-to-cart">Add To Cart</span>
+              <i class="fas fa-shopping-cart"></i>
+              <i class="fas fa-shopping-bag"></i>
+              <span class="added-to-cart">Added To Cart</span>
+            </button>
+            <h6><a href="#">PG 6</a></h6><span class="price">
+              <del>$230.00</del></span><span class="price sale">$220.00</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-6 col-md-4">
+        <div class="product tumbnail thumbnail-3"><a href="#"><img src="images/shoes3.jpg"></a>
+          <div class="caption">
+            <button>
+              <span class="add-to-cart">Add To Cart</span>
+              <i class="fas fa-shopping-cart"></i>
+              <i class="fas fa-shopping-bag"></i>
+              <span class="added-to-cart">Added To Cart</span>
+            </button>
+            <h6><a href="#">Kyriw Low 5</a></h6><span class="price">$299.99</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-6 col-md-4">
+        <div class="product tumbnail thumbnail-3"><a href="#"><img src="images/shoes4.jpg"></a>
+          <div class="caption">
+            <button>
+              <span class="add-to-cart">Add To Cart</span>
+              <i class="fas fa-shopping-cart"></i>
+              <i class="fas fa-shopping-bag"></i>
+              <span class="added-to-cart">Added To Cart</span>
+            </button>
+            <h6><a href="#">Grade School Air Jordan 12 Retro</a></h6><span class="price">
+              <del>$200.00</del></span><span class="price sale">$80.00</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-6 col-md-4">
+        <div class="product tumbnail thumbnail-3"><a href="#"><img src="images/shoes5.jpg"></a>
+          <div class="caption">
+            <button>
+              <span class="add-to-cart">Add To Cart</span>
+              <i class="fas fa-shopping-cart"></i>
+              <i class="fas fa-shopping-bag"></i>
+              <span class="added-to-cart">Added To Cart</span>
+            </button>
+            <h6><a href="#">Grade School Dunk Low</a></h6><span class="price">
+              <del>$219.99</del></span><span class="price sale">$199.99</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-6 col-md-4">
+        <div class="product tumbnail thumbnail-3"><a href="#"><img src="images/shoes6.jpg" alt=""></a>
+          <div class="caption">
+            <button>
+              <span class="add-to-cart">Add To Cart</span>
+              <i class="fas fa-shopping-cart"></i>
+              <i class="fas fa-shopping-bag"></i>
+              <span class="added-to-cart">Added To Cart</span>
+            </button>
+            <h6><a href="#">Air Jordan 7 Retro SE</a></h6><span class="price">
+              <del>$324.99</del></span><span class="price sale">$224.99</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-6 col-md-4">
+        <div class="product tumbnail thumbnail-3"><a href="#"><img src="images/shoes7.jpg" alt=""></a>
+          <div class="caption">
+            <button>
+              <span class="add-to-cart">Add To Cart</span>
+              <i class="fas fa-shopping-cart"></i>
+              <i class="fas fa-shopping-bag"></i>
+              <span class="added-to-cart">Added To Cart</span>
+            </button>
+            <h6><a href="#">Air Max 2 CB 94</a></h6><span class="price">$300.00</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-6 col-md-4">
+        <div class="product tumbnail thumbnail-3"><a href="#"><img src="images/shoes8.jpg" alt=""></a>
+          <div class="caption">
+            <button>
+              <span class="add-to-cart">Add To Cart</span>
+              <i class="fas fa-shopping-cart"></i>
+              <i class="fas fa-shopping-bag"></i>
+              <span class="added-to-cart">Added To Cart</span>
+            </button>
+            <h6><a href="#">Air Jordan 1 Mid</a></h6><span class="price">
+              <del>$220.99</del></span><span class="price sale">$199.49</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-6 col-md-4">
+        <div class="product tumbnail thumbnail-3"><a href="#"><img src="images/shoes9.jpg" alt=""></a>
+          <div class="caption">
+            <button>
+              <span class="add-to-cart">Add To Cart</span>
+              <i class="fas fa-shopping-cart"></i>
+              <i class="fas fa-shopping-bag"></i>
+              <span class="added-to-cart">Added To Cart</span>
+            </button>
+            <h6><a href="#">Air Jordan 1 High</a></h6><span class="price">
+              <del>$220.99</del></span><span class="price sale">$210.00</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-      <script>
-        function sendData(e){
-          fetch('getproducts', {
-            method: 'POST',
-            headers:{'Content-Type': 'application/json'},
-            body: JSON.stringify({payload: e.value})
-          });
-        }
-      </script>
-</body>    
-</html>     
+  <script>
+    function sendData(e) {
+      fetch('getproducts', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ payload: e.value })
+      });
+    }
+  </script>
+</body>
+
+</html>
