--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./style.css" >
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./navbar.css">
+    <script type="text/javascript" src="app.js"></script>
     <title>Shoes Website Landing Page</title>
 </head>
+
 <body>
     <div class="container">
         <div class="navbar">
             <h3 class="logo">Trendy Shoes Online</h3>
-            <nav>
+            <nav id="nav">
                 <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="./login.html">Log In</a></li>
-                    <li><a href="./cart.html">My Cart</a></li>
                     <li><a href="./catalog.html">Catalog</a></li>
                     <li>><a href="./about.html">About Us</a></li>
                     <li>><a href="./locations.html">Locations</a></li>
                     <li><a href="./contact.html">Contact Us</a></li>
-
                 </ul>
             </nav>
         </div>
@@ -39,4 +40,5 @@
         <img src="images/doit.png" class="image">
     </div>
 </body>
+
 </html>
