--- a/login.html
+++ b/login.html
@@ -1,36 +1,47 @@
-<!DOCTYPE html>    
-<html>    
-<head>    
-    <title>Login Form</title>    
-    <link rel="stylesheet" type="text/css" href="login.css">    
-</head>    
-<body> 
-    <div class="topnav">
-        <a class="active" href="index.html">Home</a>
-        <div class="topnav-right">
-          <a href="#">Log Out</a>
-        </div>
-      </div>     
-    <h2>Login Page</h2><br>    
-    <div class="login">    
-    <form id="login" method="get" action="login.php">    
-        <label><b>User Name     
-        </b>    
-        </label>    
-        <input type="text" name="Uname" id="Uname" placeholder="Username">    
-        <br><br>    
-        <label><b>Password     
-        </b>    
-        </label>    
-        <input type="Password" name="Pass" id="Pass" placeholder="Password">    
-        <br><br>    
-        <input type="button" name="log" id="log" value="Log In Here">       
-        <br><br>    
-        <input type="checkbox" id="check">    
-        <span>Remember me</span>    
-        <br><br>    
-        <a href="#">Forgot Password</a>    
-    </form>     
-</div>    
-</body>    
-</html>     
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Login Form</title>
+  <link rel="stylesheet" type="text/css" href="login.css">
+  <link rel="stylesheet" href="./navbar.css">
+  <script type="text/javascript" src="app.js"></script>
+</head>
+
+<body>
+  <div class="topnav">
+    <a class="active" href="index.html">Home</a>
+    <div class="topnav-right">
+      <a href="#">Log Out</a>
+    </div>
+  </div>
+  <h2>Login Page</h2><br>
+  <div class="login">
+    <div class="navbar">
+      <nav id="nav">
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./catalog.html">Catalog</a></li>
+          <li>><a href="./about.html">About Us</a></li>
+          <li><a href="./contact.html">Contact Us</a></li>
+        </ul>
+      </nav>
+    </div>
+    <form id="login" method="get" action="login.php">
+      <label><b>User Name</b></label>
+      <input type="text" name="Uname" id="Uname" placeholder="Username">
+      <br><br>
+      <label><b>Password</b></label>
+      <input type="Password" name="Pass" id="Pass" placeholder="Password">
+      <br><br>
+      <input type="button" name="log" id="log" value="Log In Here" onclick="onClickLoginEventHandler">
+      <br><br>
+      <input type="checkbox" id="check">
+      <span>Remember me</span>
+      <br><br>
+      <a href="#">Forgot Password</a>
+    </form>
+  </div>
+</body>
+
+</html>
