added locations page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <li><a href="./cart.html">My Cart</a></li>
                     <li><a href="./catalog.html">Catalog</a></li>
                     <li>><a href="./about.html">About Us</a></li>
+                    <li>><a href="./locations.html">Locations</a></li>
                     <li><a href="./contact.html">Contact Us</a></li>
 
                 </ul>
@@ -29,9 +30,9 @@
             <div class="text">
                 <button class="btn" href="./catalog.html">Shop Now</button>
                 <div class="social-media">
-                    <a href=""><i class="fa icons fa-facebook"></i></a>
-                    <a href=""><i class="fa icons fa-instagram"></i></a>
-                    <a href=""><i class="fa icons fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/Trendysshoeshoppe"><i class="fa icons fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/trendyshoe/"><i class="fa icons fa-instagram"></i></a>
+                    <a href="https://twitter.com/i/flow/single_sign_on"><i class="fa icons fa-twitter"></i></a>
                 </div>
             </div>
         </div>
