fixed navbar to be shown according to if user is logged in

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 <body>
     <div class="navbar">
         <nav id="nav">
-            <ul>
+            <ul id="navElem">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./catalog.html">Catalog</a></li>
                 <li><a href="./about.html">About Us</a></li>
