--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,7 @@
     <h2>Shopping cart</h2><br>
     <div class="navbar">
         <nav id="nav">
-            <ul>
+            <ul id="navElem">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./catalog.html">Catalog</a></li>
                 <li><a href="./about.html">About Us</a></li>
