--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
 <body>
   <div class="navbar">
     <nav id="nav">
-      <ul>
+      <ul id="navElem">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./catalog.html">Catalog</a></li>
         <li><a href="./about.html">About Us</a></li>
