--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="navbar">
             <h3 class="logo">Trendy Shoes Online</h3>
             <nav id="nav">
-                <ul>
+                <ul id="navElem">
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./catalog.html">Catalog</a></li>
                     <li><a href="./about.html">About Us</a></li>
