--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
     <div class="login">
         <div class="navbar">
             <nav id="nav">
-                <ul>
+                <ul id="navElem">
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./catalog.html">Catalog</a></li>
                     <li><a href="./about.html">About Us</a></li>
