added locations elements where needed

--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./navbar.css">
-<<<<<<< HEAD
-    <script type="text/javascript" src="app.js"></script>
-=======
     <script type="text/javascript" src="app.js" async></script>
->>>>>>> 6ee661e (added navbar functionality according to if user authenticated + changed a bit formatting)
     <title>Shoes Website Landing Page</title>
 </head>
 
@@ -25,6 +21,7 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./catalog.html">Catalog</a></li>
                     <li><a href="./about.html">About Us</a></li>
+                    <li><a href="./locations.html">Locations</a></li>
                     <li><a href="./contact.html">Contact Us</a></li>
                 </ul>
             </nav>
