--- a/register.html
+++ b/register.html
@@ -5,8 +5,14 @@
     <title>Register Form</title>
     <link rel="stylesheet" type="text/css" href="login.css">
     <link rel="stylesheet" href="./navbar.css">
-    <script type="text/javascript" src="app.js" async></script>
-    <script type="text/javascript" src="script.js"></script>
+    <!-- <script type="text/javascript" src="script.js"></script> -->
+    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" async>
+      window.addEventListener("load", async () => {
+        await setNavBar();
+      })
+    </script>
+
 </head>
 
 <body>
