--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,12 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./contact.css">
     <link rel="stylesheet" href="./navbar.css">
-    <script type="text/javascript" src="app.js" async></script>
+    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" async>
+        window.addEventListener("load", async () => {
+            await setNavBar();
+        })
+    </script>
     <title>Contact Us</title>
 </head>
 
