--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./navbar.css">
-    <script type="text/javascript" src="app.js" async></script>
-    <title>Shoes Website Landing Page</title>
+    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" async>
+      window.addEventListener("load", async () => {
+        await setNavBar();
+      })
+    </script>
+      <title>Shoes Website Landing Page</title>
 </head>
 
 <body>
