--- a/locations.html
+++ b/locations.html
@@ -2,7 +2,12 @@
 <html>
 
 <head>
-	<script type="text/javascript" src="app.js" async></script>
+	<script type="text/javascript" src="app.js"></script>
+	<script type="text/javascript" async>
+		window.addEventListener("load", async () => {
+			await setNavBar();
+		})
+	</script>
 	<meta charset="utf-8">
 	<title>Customize the scroll-bar</title>
 	<style media="screen">
