--- a/admin.html
+++ b/admin.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="one">Products</div>
+      <div class="one"><a href=index.html> back to home page</a></div>
       <form id="addProduct" method="get">
       <h4>Add Product:</h4>
         <label for="productname">Product name:</label>
@@ -36,9 +36,9 @@
               <th>Remove</th>
             </tr>
           </table>
-
-      <div class="two">Users</div>
-      <table id="usersTable">
+          <br><br>
+        <h4>Users Events:</h4>
+        <table id="usersTable">
         <tr>
           <th>Email</th>
           <th>Events</th>
