--- a/locations.html
+++ b/locations.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<link rel="stylesheet" href="./navbar.css" async>
 	<script type="text/javascript" src="app.js"></script>
 	<script type="text/javascript" async>
 		window.addEventListener("load", async () => {
