tests are now working + additional changes in cart and catalog

--- a/readme.html
+++ b/readme.html
@@ -21,7 +21,7 @@
       <input id="q2" type="checkbox" class="panel">
       <div class="plus">+</div>
       <label for="q2" class="panel-title">What additional page(s) did you add? How to operate it?</label>
-      <div class="panel-content">About us, Contact us, X, Y</div>
+      <div class="panel-content">About us - some information about who we are and social links to web, Contact us - sending emails to administrators by filling in the form, Locations - In case you want to visit us you can find our stores in the map, Sign Up -  easy resgistresation for new users.</div>
     </div>
 
     <div class="faq-question">
@@ -30,7 +30,7 @@
       <label for="q3" class="panel-title"> What was hard to do?</label>
       <div class="panel-content">It was hard to plan the DB and its connection to the website, registering new users,
         and find exiting ones, same for the products. We have not gone through it in class and we found it more
-        difficulte than we imaganed it would be</div>
+        difficulte than we imaganed it would be. Also, the tests part was harder than expected. It took me a long time to understand how to work with Jest</div>
     </div>
 
     <div class="faq-question">
@@ -38,14 +38,14 @@
       <div class="plus">+</div>
       <label for="q4" class="panel-title">Who is your partner? name and id. What did you do? What did your partner
         do?</label>
-      <div class="panel-content">Yael, she ...</div>
+      <div class="panel-content">>Yael Erdrich, I was mainly in charge on the Frotend, DB and the tests and Yael did the Backend routes, cookies and users views</div>
     </div>
 
     <div class="faq-question">
       <input id="q5" type="checkbox" class="panel">
       <div class="plus">+</div>
       <label for="q5" class="panel-title"> Specify all the different routes your app supports</label>
-      <div class="panel-content">...</div>
+      <div class="panel-content">Login, Register, Logout, GetProducts, addToCart, removerFromCart</div>
     </div>
   </div>
 </body>
