--- a/cart.html
+++ b/cart.html
@@ -29,12 +29,13 @@
     </div>
     <div class="container padding-bottom-3x mb-1">
         <!-- Shopping Cart-->
+        <h2>Your Items</h2>
         <div class="table-responsive shopping-cart">
             <thead>
                 <tr>
-                    <th class="text-center">Name</th>
-                    <th class="text-center">Price</th>
-                    <th class="text-center">Quantity</th>
+                    <th class="text-center"><b>Name</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                    <th class="text-center"><b>Price</b>&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                    <th class="text-center"><b>Quantity</b></th>
                 </tr>
             </thead>
             <table class="table" id="insertCartItemUnder"></table>
@@ -57,8 +58,8 @@
                             class="icon-arrow-left"></i>&nbsp;Back to Shopping</a></div>
                 <div class="column"><a class="btn btn-primary" href="#" data-toast="" data-toast-type="success"
                         data-toast-position="topRight" data-toast-icon="icon-circle-check" data-toast-title="Your cart"
-                        data-toast-message="is updated successfully!">Update
-                        Cart</a><a class="btn btn-success" href="#">Checkout</a></div>
+                        data-toast-message="is updated successfully!">
+                        </a><a class="btn btn-success" href="#">Checkout</a></div>
                 <button class="text-center"><a class="btn btn-sm btn-outline-danger"
                         onclick="onClearItemEventHandler()">Clear Cart</a></button>
             </div>
