--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="content">
             <h1>The House of <br><span class="style">Trendy Shoes</span></h1>
             <div class="text">
-                <button class="btn" href="./catalog.html">Shop Now</button>
+                <button class="btn" onclick="location.href='http://127.0.0.1:3000/catalog.html';">Shop Now</button>
                 <div class="social-media">
                     <a href="https://www.facebook.com/Trendysshoeshoppe"><i class="fa icons fa-facebook"></i></a>
                     <a href="https://www.instagram.com/trendyshoe/"><i class="fa icons fa-instagram"></i></a>
