--- a/readme.html
+++ b/readme.html
@@ -14,14 +14,14 @@
       <input id="q1" type="checkbox" class="panel">
       <div class="plus">+</div>
       <label for="q1" class="panel-title">What are you selling?</label>
-      <div class="panel-content">Shoes</div>
+      <div class="panel-content">Shoes by Nike</div>
     </div>
 
     <div class="faq-question">
       <input id="q2" type="checkbox" class="panel">
       <div class="plus">+</div>
       <label for="q2" class="panel-title">What additional page(s) did you add? How to operate it?</label>
-      <div class="panel-content">About us - some information about who we are and social links to web, Contact us - sending emails to administrators by filling in the form, Locations - In case you want to visit us you can find our stores in the map, Sign Up -  easy resgistresation for new users.</div>
+      <div class="panel-content">About us - some information about who we are and social links to web, Contact us - sending emails to administrators by filling in the form, Locations - In case you want to visit us you can find our stores in the map, Sign Up -  easy resgistresation for new users. In addition we used MongoDB which gave us additional functionalities such as privacy and DDOS security features that we used</div>
     </div>
 
     <div class="faq-question">
@@ -38,7 +38,7 @@
       <div class="plus">+</div>
       <label for="q4" class="panel-title">Who is your partner? name and id. What did you do? What did your partner
         do?</label>
-      <div class="panel-content">>Yael Erdrich, I was mainly in charge on the Frotend, DB and the tests and Yael did the Backend routes, cookies and users views</div>
+      <div class="panel-content">>Yael Erdrich, I was mainly in charge on the Frotend, DB setup and maintanance and the tests and Yael did the Backend routes, cookies and users views</div>
     </div>
 
     <div class="faq-question">
