items added from admin can be rendered in cart

--- a/readme.html
+++ b/readme.html
@@ -40,14 +40,14 @@
       <div class="plus">+</div>
       <label for="q4" class="panel-title">Who is your partner? name and id. What did you do? What did your partner
         do?</label>
-      <div class="panel-content">>Yael Erdrich, I was mainly in charge on the Frotend, DB setup and maintanance and the tests and Yael did the Backend routes, cookies and users views</div>
+      <div class="panel-content">>Yael Erdrich, 208460840. I was mainly in charge on the Frotend, DB setup and maintanance and the tests and Yael did the Backend routes, cookies and users views</div>
     </div>
 
     <div class="faq-question">
       <input id="q5" type="checkbox" class="panel">
       <div class="plus">+</div>
       <label for="q5" class="panel-title"> Specify all the different routes your app supports</label>
-      <div class="panel-content">Login, Register, Logout, GetProducts, addToCart, removerFromCart</div>
+      <div class="panel-content">/isloggedin, /register, /login, /addNewProductToDB, /removeProductFromDB, /addItemToCart, /removeItemFromCart, /getUsersFromDB, /getItemsFromDB, /itemsExistInCart, /getEventsFromDB, /clearCart, /redirectHome, /successClearCart, /successLogin, /notSuccessLogin, /register, /logout, /backToCart</div>
     </div>
   </div>
 
@@ -101,7 +101,7 @@
       <input id="q10" type="checkbox" class="panel">
       <div class="plus">+</div>
       <label for="q10" class="panel-title"> Specify all the different routes your app supports</label>
-      <div class="panel-content">/isloggedin, /register, /login, /addNewProductToDB, /removeProductFromDB, /addItemToCart, /removeItemFromCart, /getUsersFromDB, /getItemsFromDB, /itemsExistInCart, /getEventsFromDB, /clearCart, /redirectHome, /successClearCart, /successLogin, /notSuccessLogin, /register, /logout, /backToCart, / </div>
+      <div class="panel-content">/isloggedin, /register, /login, /addNewProductToDB, /removeProductFromDB, /addItemToCart, /removeItemFromCart, /getUsersFromDB, /getItemsFromDB, /itemsExistInCart, /getEventsFromDB, /clearCart, /redirectHome, /successClearCart, /successLogin, /notSuccessLogin, /register, /logout, /backToCart</div>
     </div>
   </div>
 </body>
